<resources>
    <string name="app_name">Meu Estoque</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="add_product">Adicionar Produto</string>
    <string name="empty_view_subtitle_text">Sem estoque</string>
    <string name="add_dialog_title">Adicionar novo produto</string>
    <string name="quantity">Quantidade</string>
    <string name="price">Preço</string>
    <string name="btn_select_image">Selecionar imagem</string>
    <string name="default_product_name">"Product "</string>
    <string name="list_product_quantity_title">quantidade</string>
    <string name="default_product_quantity">0</string>
    <string name="default_product_price">400.00</string>
    <string name="edit_activity_name_title">Nome</string>
    <string name="edit_activity_price_title">Preço</string>
    <string name="edit_activity_quantity_title">Qtd em estoque</string>
    <string name="btn_quantity">Alterar Quantidade</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_delete">Apagar</string>
    <string name="sell_product_failed">Erro na venda</string>
    <string name="edit_activity_title">Editar</string>
    <string name="email_subject">Pedido de</string>
    <string name="hi">Ola,</string>
    <string name="message">Gostaria de pedir</string>
    <string name="product_name_title">Produto:</string>
    <string name="thank">Obrigado</string>
    <string name="update_product_failed">Erro ao atualizar</string>
    <string name="update_product_successful">Atualização ok</string>
    <string name="delete_dialog_title">Deletar?</string>
    <string name="delete_product_failed">Algum erro aconteceu</string>
    <string name="delete_product_successful">Produto apagado</string>
    <string name="product_info_not_empty">Campos obrigaórios</string>
    <string name="external_storage">Midia</string>
    <string name="permission_message">Você precisa permitir</string>
    <string name="permission_denied">Permissão negad</string>
    <string name="btn_order">Pedido</string>
    <string name="btn_sell_product">"Vender "</string>
    <string name="permission_title">Permissão Requerida</string>
    <string name="product_name">Nome do Produto:</string>
    <string name="product_price_title">Valor</string>
</resources>
