<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:paddingLeft="8dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/edit_activity_name_title"
            android:textColor="#2B3D4D"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/default_product_name"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/product_price_title"
            android:textColor="#2B3D4D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:inputType="numberDecimal"
            android:text="@string/default_product_price"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/edit_activity_quantity_title"
            android:textColor="#2B3D4D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:text="@string/default_product_quantity"
            android:textSize="18sp" />
    </LinearLayout>


    <ImageView
        android:paddingLeft="8dp"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_camera"/>
</LinearLayout>