<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:gravity="start"
            android:orientation="vertical">

            <TextView xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="John Doe" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/quantity"
                    style="@style/Labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_product_quantity_title" />

                <TextView
                    android:id="@+id/textview_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5"
                    style="@style/Info"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    style="@style/Labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_title" />

                <TextView
                    android:id="@+id/textview_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5"
                    style="@style/Info"

                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/btn_sell"
        style="@style/Butons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sell_product" />


</LinearLayout>